--- a/app/GuardianAngel/app/src/main/res/layout/update_layout.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/update_layout.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -21,37 +22,41 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="100dp">
-    </ImageView>
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="20dp"/>
 
 
     <TextView
         android:id="@+id/dataTextView"
-        android:layout_width="150dp"
+        android:text="@string/health_status"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:textSize="18sp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_below="@id/customImageView"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/responseTextView"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_below="@id/dataTextView"/>
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="end"
         android:layout_marginRight="16dp"
-        android:layout_gravity="end"/>
+        android:layout_marginBottom="16dp"
+        android:text="Back" />
 
 </RelativeLayout>
