--- a/app/GuardianAngel/app/src/main/res/layout/fragment_details.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_details.xml
@@ -30,7 +30,7 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="600dp"
         android:layout_marginTop="70dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -99,7 +99,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/age"
-                    android:layout_width="115dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="100dp"
@@ -117,15 +117,16 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/gender"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                    android:layout_width="115dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="130dp"
+                    android:layout_marginStart="120dp"
                     android:layout_marginTop="100dp"
                     android:hint="@string/gender"
                     app:layout_constraintStart_toStartOf="@+id/age"
                     app:layout_constraintTop_toTopOf="@+id/name">
 
                     <AutoCompleteTextView
+                        android:id="@+id/genderoption"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="none"
