--- a/app/GuardianAngel/app/src/main/res/layout/view_main.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/view_main.xml
@@ -101,16 +101,8 @@
                 android:layout_marginEnd="20dp"
                 android:checkable="true"
                 android:clickable="true"
-                android:focusable="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent">
-
-
+                android:focusable="true">
             </ListView>
-
-
-
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
