--- a/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
@@ -199,13 +199,74 @@
                 app:layout_constraintTop_toBottomOf="@+id/card1">
 
                 <ImageView
+                    android:id="@+id/icon_sleep"
+                    android:layout_margin="15dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:gravity="center_vertical"
+                    android:contentDescription="@string/none"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:srcCompat="@drawable/icon_sleep" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Avg Sleep duration"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="6h 10m"
+                            android:textSize="30sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Wakeup Time"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Unset"
+                            android:textSize="30sp" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <ImageView
                     android:id="@+id/arrow2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginStart="280dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/none"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/baseline_chevron_right_24" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -286,10 +347,10 @@
                     android:id="@+id/arrow3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginStart="280dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/none"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/baseline_chevron_right_24" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -354,10 +415,10 @@
                     android:id="@+id/arrow4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginStart="280dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/none"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/baseline_chevron_right_24" />
 
             </com.google.android.material.card.MaterialCardView>
@@ -412,10 +473,10 @@
                     android:id="@+id/arrow5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginStart="280dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/none"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/baseline_chevron_right_24" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -472,10 +533,10 @@
                     android:id="@+id/arrow6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginStart="280dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/none"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/baseline_chevron_right_24" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -498,8 +559,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="280dp"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:contentDescription="@string/none"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/baseline_chevron_right_24" />
             </com.google.android.material.card.MaterialCardView>
 
