--- a/app/GuardianAngel/app/src/main/res/values/colors.xml
+++ b/app/GuardianAngel/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#8692f7</color>
+    <color name="dark_purple">#673AB7</color>
 </resources>
