--- a/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
+++ b/app/GuardianAngel/app/src/main/res/layout/fragment_home.xml
@@ -198,15 +198,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/card1">
 
-                <ImageView
-                    android:id="@+id/icon_sleep"
-                    android:layout_margin="15dp"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:gravity="center_vertical"
-                    android:contentDescription="@string/none"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:srcCompat="@drawable/icon_sleep" />
+
 
 
                 <LinearLayout
@@ -215,6 +207,15 @@
                     android:layout_marginTop="50dp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/icon_sleep"
+                        android:layout_margin="15dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:gravity="center_vertical"
+                        android:contentDescription="@string/none"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:srcCompat="@drawable/sleep" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -227,7 +228,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Avg Sleep duration"
+                            android:text="Average Sleep"
                             android:textSize="18sp" />
 
                         <TextView
